2005-02-20  Kostas Papadimas <pkst@gnome.org>

        * configure.ac: Add el (Greek) to ALL_LINGUAS
 
Sun Feb 20 00:47:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/developing.html doc/helping.html doc/index.html: more fixes
	  of links, etc. on the web site.

Sun Feb 20 00:23:00 CET 2005 Daniel Veillard <veillard@redhat.com>

	* TODO: small update

Sun Feb 20 00:11:09 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/developing.html doc/helping.html doc/index.html doc/sabayon.css
	  doc/testing.html doc/images/screenshot.png: build a preliminary
	  web page based on Evince one.

2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Add «nb» and «no» to ALL_LINGUAS

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: kill the xmlsoft.org url :)

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.15.

==================== 0.12 ====================

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.12.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* sabayon.spec.in: copy GDM's method of creating 
	the sabayon user.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 0.12.

==================== 0.11 ====================

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 0.11.

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.glade: remove the splitter
	for now - we're not using the text view yet.
	
	* lib/config.py.in: add ADMIN_TOOL_TIMEOUT
	
	* lib/protosession.py: and use it here.
	
	* lib/sources/gconfsource.py:
	(GConfChange): store the key and value rather
	than the entry so we can unset the value if
	we wish.
	
	* lib/sources/paneldelegate.py: upd.
	
	* sabayon.spec.in: create /etc/gconf/2/local-defaults.path
	and /etc/gconf/2/local-mandatory.path

2005-02-17  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: clobber all process running