@@ -28,9 +28,9 @@
 	The GNOME Bugsquad has a good <a href="http://developer.gnome.org/projects/bugsquad/triage/">triage guide</a> for people new to bugzilla and GNOME.  Read up on that before doing any triage work with bugzilla and if you know that please also read our <em>bug reporting guidelines</em> in the <a href="testing.html">testing</a> section.
 	</p>
           <strong>Distribution Support</strong>
-          <p>
-	Sabayon needs as much testing and widespread distribution as possible in order to satisfy its goal of becoming the default document viewer in GNOME and replace the craziness that exists.
-	</p>
+          <p> Sabayon needs as much testing and widespread distribution as
+possible in order to become the default preference management tool for
+sysadmins in GNOME, replacing the ad hoc solutions that people currently use.</p>
           <p>
 	Ask your favorite distribution to package Sabayon and use it.
 	</p>
