@@ -1,3 +1,7 @@
+Mon Feb 21 11:48:20 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* doc/helping.html: one more Evince->Sabaon cleanup bug #168000
+
 2005-02-20  Kostas Papadimas <pkst@gnome.org>
 
         * configure.ac: Add el (Greek) to ALL_LINGUAS
